--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -253,8 +253,12 @@ $(document).ready(function () {
     <li>
       <a href="data viz/Bubble-Plots.html">Bubble Plots</a>
     </li>
-    <li class="dropdown-header">Visualizing Distributions</li>
-    <li class="dropdown-header">3D Scatterplots</li>
+    <li>
+      <a href="data viz/Visualizing-Distributions.html">Visualizing Distributions</a>
+    </li>
+    <li>
+      <a href="data viz/Missing-Data.html">Missing Data</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -289,9 +293,15 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="lab-02-propensity-scores.html">1</a>
+      <a href="causal/lab-01-causal-diagrams.html">Causal Diagrams</a>
     </li>
-    <li class="dropdown-header">Decision Trees</li>
+    <li>
+      <a href="causal/lab-03-using-propensity-scores.html">Using Propensity Scores</a>
+    </li>
+    <li>
+      <a href="causal/causal-analysis-I.html">Causal Analysis I</a>
+    </li>
+    <li class="dropdown-header">Causal Analysis II</li>
   </ul>
 </li>
 <li class="dropdown">
