--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Example Website</title>
+<title>The Coding Cave</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -239,7 +239,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">This is an example!</a>
+      <a class="navbar-brand" href="index.html">EG's Coding Cave</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -333,20 +333,20 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Example Website</h1>
+<h1 class="title toc-ignore">The Coding Cave</h1>
 
 </div>
 
 
-<p>This is markdown</p>
+<p><right> Throughout this website you will find reader-friendly copies of different coding projects I’ve completed. All code is done and compiled in R Markdown. Topics include:</p>
 <ul>
-<li>I can include bullets</li>
+<li>Data Visualization</li>
+<li>Regression</li>
+<li>Statistical Learning</li>
+<li>Causal Inference</li>
+<li>Tidy Data </right></li>
 </ul>
-<div id="i-can-include-headers" class="section level2">
-<h2>I can include headers</h2>
-<p>&lt;img src = "img/img.jpg&gt;</p>
-<p>I can include <i> html</i></p>
-</div>
+<p><img src = "r%20hex%20sticker.png"></p>
 
 
 
