Everything has a link

--- a/index.html
+++ b/index.html
@@ -269,7 +269,9 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Linear</li>
-    <li class="dropdown-header">General</li>
+    <li>
+      <a href="regresssion/GLM-project.html">General</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -301,7 +303,9 @@ $(document).ready(function () {
     <li>
       <a href="causal/causal-analysis-I.html">Causal Analysis I</a>
     </li>
-    <li class="dropdown-header">Causal Analysis II</li>
+    <li>
+      <a href="causal/data-analysis.html">Causal Analysis II</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -312,7 +316,7 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="lab-02-propensity-scores.html">Mushrooms</a>
+      <a href="tidy data/GLM-project.html">Mushrooms</a>
     </li>
   </ul>
 </li>
@@ -338,15 +342,22 @@ $(document).ready(function () {
 </div>
 
 
-<p><right> Throughout this website you will find reader-friendly copies of different coding projects I’ve completed. All code is done and compiled in R Markdown. Topics include:</p>
+<p><br></br></p>
+<p>Throughout this website you will find reader-friendly copies of
+different coding projects I’ve completed. All code is done and compiled
+in R Markdown.</p>
+<p>Topics include:</p>
 <ul>
 <li>Data Visualization</li>
 <li>Regression</li>
 <li>Statistical Learning</li>
 <li>Causal Inference</li>
-<li>Tidy Data </right></li>
+<li>Tidy Data</li>
 </ul>
-<p><img src = "r%20hex%20sticker.png"></p>
+<p><br></br></p>
+<center>
+<img src="hexline.png"/>
+</center>
 
 
 
