--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@ $(document).ready(function () {
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
-    <li class="dropdown-header">Linear</li>
+    <li>
+      <a href="regression/Lab-05 (1).html">Linear</a>
+    </li>
     <li>
       <a href="regresssion/GLM-project.html">General</a>
     </li>
@@ -282,9 +284,17 @@ $(document).ready(function () {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="lab-02-propensity-scores.html">Cross Validation</a>
+      <a href="stat learning/Cross Validation.html">Cross Validation</a>
     </li>
-    <li class="dropdown-header">Decision Trees</li>
+    <li>
+      <a href="stat learning/Decision-Tree.html">Decision Trees</a>
+    </li>
+    <li>
+      <a href="stat learning/363 Project.html">Ridge, Lasso, and Elastic Net</a>
+    </li>
+    <li>
+      <a href="Lab-07.html">Random Forest, Boosted Trees, Elastic Net</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
